# namespace-packages

./: README.md
de_tools_reports/: pyproject.toml
de_tools_reports/de_tools/: reports.py
de_tools_snowflake/: README.md  pyproject.toml
de_tools_snowflake/de_tools/: snowflake_tool.py
